--- a/.gitlab/ci/build-tests-standard.yml
+++ b/.gitlab/ci/build-tests-standard.yml
@@ -2,6 +2,7 @@
   tags:
     - linux
     - shared
+  dependencies: []
   artifacts:
     name: "${CI_JOB_NAME}_${CI_JOB_ID}"
     expire_in: 2 weeks
@@ -12,7 +13,7 @@
     - cd ${CI_JOB_NAME}
 
     # Build application.
-    - ../tools/build/${Script}.sh
+    - ../tools/build/${Script}.sh "${Args}"
     - make
 
 .Build_Test_Linux_GCC:
@@ -69,6 +70,12 @@ Linux_GCC_Debug_Build:
   extends: .Build_Test_Linux_GCC
   variables:
     Script: "linux-gcc-debug"
+
+Linux_GCC_Debug_Codecov_Build:
+  extends: .Build_Test_Linux_GCC
+  variables:
+    Script: "linux-gcc-debug"
+    Args: "-DCOVERAGE=ON"
 
 Linux_GCC_Release_Build:
   extends: .Build_Test_Linux_GCC
