--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,3 +11,4 @@ include:
   - ".gitlab/ci/build-tests-freertos.yml"
   - ".gitlab/ci/build-tests-standard.yml"
   - ".gitlab/ci/quality.yml"
+  - ".gitlab/ci/run-tests-standard.yml"
