--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ stages:
 include:
   - ".gitlab/ci/build-tests-freertos.yml"
   - ".gitlab/ci/build-tests-standard.yml"
+  - ".gitlab/ci/coverage-standard.yml"
   - ".gitlab/ci/docs.yml"
   - ".gitlab/ci/quality.yml"
   - ".gitlab/ci/run-tests-standard.yml"
