--- a/.gitlab/ci/coverage-standard.yml
+++ b/.gitlab/ci/coverage-standard.yml
@@ -9,7 +9,7 @@
     name: "${CI_JOB_NAME}_${CI_JOB_ID}"
     expire_in: 2 weeks
     paths:
-      - ${CI_JOB_NAME}/bin/coverage
+      - ${CI_JOB_NAME}/bin/coverage/*
   script:
     - mkdir ${CI_JOB_NAME}
     - cd ${CI_JOB_NAME}
