--- a/.gitlab/ci/run-tests-standard.yml
+++ b/.gitlab/ci/run-tests-standard.yml
@@ -37,3 +37,13 @@ Timestamp_Linux_UT:
   extends: .Run_Test_Linux
   variables:
     TestTags: "[timestamp]"
+
+#Timeout_Linux_ARM_UT:
+#  extends: .Run_Test_Linux_ARM
+#  variables:
+#    TestTags: "[timeout]"
+
+Timeout_Linux_UT:
+  extends: .Run_Test_Linux
+  variables:
+    TestTags: "[timeout]"
