--- a/.gitlab/ci/coverage-standard.yml
+++ b/.gitlab/ci/coverage-standard.yml
@@ -9,7 +9,7 @@
     name: "${CI_JOB_NAME}_${CI_JOB_ID}"
     expire_in: 2 weeks
     paths:
-      - ${CI_JOB_NAME}/bin/coverage/coverage.info
+      - ${CI_JOB_NAME}/coverage
   script:
     - mkdir ${CI_JOB_NAME}
     - cd ${CI_JOB_NAME}
@@ -19,7 +19,6 @@
     - make
     - bin/osal-tests [unit]${Tags}
     - make coverage
-    - ls -l
 
 Timestamp_Coverage:
   extends: .Standard_Coverage
