--- a/.gitlab/ci/quality.yml
+++ b/.gitlab/ci/quality.yml
@@ -66,7 +66,8 @@ Coverage_Total:
     - mkdir ${CI_JOB_NAME}
     - cd ${CI_JOB_NAME}
 
-    - lcov -a ../Merge_Coverage/coverage/coverage.info \
+    - |
+      lcov -a ../Merge_Coverage/coverage/coverage.info \
            -a ../Timeout_Coverage/coverage/coverage.info \
            -o coverage.info
     - genhtml coverage.info -o html
