--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,6 @@ include:
 #  - ".gitlab/ci/build-tests-freertos.yml"
 #  - ".gitlab/ci/build-tests-standard.yml"
   - ".gitlab/ci/coverage-standard.yml"
-#  - ".gitlab/ci/docs.yml"
+  - ".gitlab/ci/docs.yml"
   - ".gitlab/ci/quality.yml"
 #  - ".gitlab/ci/run-tests-standard.yml"
