Add uploading coverage results to codecov.io.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ stages:
   - deploy
 
 include:
-#  - ".gitlab/ci/build-tests-freertos.yml"
-#  - ".gitlab/ci/build-tests-standard.yml"
+  - ".gitlab/ci/build-tests-freertos.yml"
+  - ".gitlab/ci/build-tests-standard.yml"
   - ".gitlab/ci/coverage-standard.yml"
-  - ".gitlab/ci/docs.yml"
+  - ".gitlab/ci/deploy.yml"
   - ".gitlab/ci/quality.yml"
-#  - ".gitlab/ci/run-tests-standard.yml"
+  - ".gitlab/ci/run-tests-standard.yml"
