--- a/.gitlab/ci/deploy.yml
+++ b/.gitlab/ci/deploy.yml
@@ -1,3 +1,17 @@
+codecov.io:
+  stage: deploy
+  only:
+    - master
+  image: kubasejdak/gcc:latest
+  tags:
+    - linux
+    - shared
+  dependencies:
+    - Coverage_Total
+  script:
+    - cd Coverage_Total/coverage
+    - bash -c "bash <(curl -s https://codecov.io/bash) -t ${CODECOV_TOKEN}"
+
 pages:
   stage: deploy
   only:
