--- a/.gitlab/ci/build-tests-standard.yml
+++ b/.gitlab/ci/build-tests-standard.yml
@@ -24,7 +24,7 @@
 .Build_Test_Linux_ARM_GCC:
   extends: .Build_Test_Linux
   stage: build-GCC
-  image: kubasejdak/arm-linux-gnueabihf-gcc:latest
+  image: kubasejdak/arm-linux-gnueabihf-gcc:8
 
 .Build_Test_Linux_Clang:
   extends: .Build_Test_Linux
