--- a/.gitlab/ci/run-tests-standard.yml
+++ b/.gitlab/ci/run-tests-standard.yml
@@ -33,17 +33,17 @@ Timeout_Linux_ARM_UT:
   variables:
     TestTags: "[timeout]"
 
-#Timeout_Linux_UT:
-#  extends: .Run_Test_Linux
-#  variables:
-#    TestTags: "[timeout]"
-#
-#Timestamp_Linux_ARM_UT:
-#  extends: .Run_Test_Linux_ARM
-#  variables:
-#    TestTags: "[timestamp]"
-#
-#Timestamp_Linux_UT:
-#  extends: .Run_Test_Linux
-#  variables:
-#    TestTags: "[timestamp]"
+Timeout_Linux_UT:
+  extends: .Run_Test_Linux
+  variables:
+    TestTags: "[timeout]"
+
+Timestamp_Linux_ARM_UT:
+  extends: .Run_Test_Linux_ARM
+  variables:
+    TestTags: "[timestamp]"
+
+Timestamp_Linux_UT:
+  extends: .Run_Test_Linux
+  variables:
+    TestTags: "[timestamp]"
