--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,8 +3,8 @@ add_subdirectory(init)
 # Object library type is used to prevent compiler from removing unit test functions from the binary.
 add_library(apposal-tests OBJECT EXCLUDE_FROM_ALL
     appMain.cpp
-  #  time.cpp
-   # timeout.cpp
+    time.cpp
+    timeout.cpp
 )
 
 target_include_directories(apposal-tests
