--- a/lib/standard/CMakeLists.txt
+++ b/lib/standard/CMakeLists.txt
@@ -4,6 +4,12 @@ add_library(osal-standard EXCLUDE_FROM_ALL
     timestamp.cpp
 )
 
+if (UNIX)
+    target_sources(osal-standard
+        PRIVATE threadLinux.cpp
+    )
+endif ()
+
 target_include_directories(osal-standard
     PUBLIC ../include include
 )
