--- a/.gitlab/ci/quality.yml
+++ b/.gitlab/ci/quality.yml
@@ -59,6 +59,7 @@ Coverage_Total:
   dependencies:
     - Timestamp_Coverage
     - Timeout_Coverage
+    - Thread_Coverage
   artifacts:
     name: "${CI_JOB_NAME}_${CI_JOB_ID}"
     expire_in: 2 weeks
@@ -71,5 +72,6 @@ Coverage_Total:
     - |
       lcov -a ../Timestamp_Coverage/coverage/coverage.info \
            -a ../Timeout_Coverage/coverage/coverage.info \
+           -a ../Thread_Coverage/coverage/coverage.info \
            -o coverage.info
     - genhtml coverage.info -o html
