--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ stages:
   - deploy
 
 include:
-  - ".gitlab/ci/build-tests-freertos.yml"
+#  - ".gitlab/ci/build-tests-freertos.yml"
   - ".gitlab/ci/build-tests-linux.yml"
-  - ".gitlab/ci/coverage-linux.yml"
-  - ".gitlab/ci/deploy.yml"
-  - ".gitlab/ci/quality.yml"
+#  - ".gitlab/ci/coverage-linux.yml"
+#  - ".gitlab/ci/deploy.yml"
+#  - ".gitlab/ci/quality.yml"
   - ".gitlab/ci/run-tests-linux.yml"
