Add initial C mutex implementation for Linux and FreeRTOS.

--- a/lib/freertos/CMakeLists.txt
+++ b/lib/freertos/CMakeLists.txt
@@ -1,14 +1,15 @@
 add_library(osal-freertos EXCLUDE_FROM_ALL
     init.cpp
+    mutex.cpp
     sleep.cpp
     thread.cpp
     timestamp.cpp
-    )
+)
 
 target_include_directories(osal-freertos
     PUBLIC ../include include
-    )
+)
 
 target_link_libraries(osal-freertos
     PUBLIC freertos
-    )
+)
