--- a/lib/linux/CMakeLists.txt
+++ b/lib/linux/CMakeLists.txt
@@ -1,14 +1,15 @@
 add_library(osal-linux EXCLUDE_FROM_ALL
     init.cpp
+    mutex.cpp
     sleep.cpp
     thread.cpp
     timestamp.cpp
-    )
+)
 
 target_include_directories(osal-linux
     PUBLIC ../include include
-    )
+)
 
 target_link_libraries(osal-linux
     PUBLIC pthread
-    )
+)
