--- a/.gitlab/ci/run-tests-linux.yml
+++ b/.gitlab/ci/run-tests-linux.yml
@@ -26,6 +26,16 @@
   variables:
     AppArtifact: "Linux_ARM_GCC_Debug_Build"
 
+Mutex_Linux_ARM_UT:
+  extends: .Run_Test_Linux_ARM
+  variables:
+    TestTags: "[mutex]"
+
+Mutex_Linux_UT:
+  extends: .Run_Test_Linux
+  variables:
+    TestTags: "[mutex]"
+
 Timeout_Linux_ARM_UT:
   extends: .Run_Test_Linux_ARM
   variables:
