Add all Mutex and ScopedLock tests for C++.

--- a/lib/cpp/CMakeLists.txt
+++ b/lib/cpp/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(osal-cpp
     Error.cpp
     init.cpp
     Mutex.cpp
-    ScopedMutex.cpp
+    ScopedLock.cpp
     sleep.cpp
     timestamp.cpp
 )
