--- a/lib/linux/CMakeLists.txt
+++ b/lib/linux/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(osal-linux EXCLUDE_FROM_ALL
     init.cpp
     Mutex.cpp
+    Semaphore.cpp
     sleep.cpp
     Thread.cpp
     timestamp.cpp
