--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
   - build-Clang
   - test
   - coverage
+  - valgrind
   - quality
   - deploy
 
@@ -16,3 +17,4 @@ include:
   - ".gitlab/ci/deploy.yml"
   - ".gitlab/ci/quality.yml"
   - ".gitlab/ci/run-tests-linux.yml"
+  - ".gitlab/ci/run-valgrind-linux.yml"
