--- a/.gitlab/ci/run-valgrind-linux.yml
+++ b/.gitlab/ci/run-valgrind-linux.yml
@@ -27,6 +27,11 @@ Mutex_Valgrind_Linux:
   variables:
     TestTags: "[mutex]"
 
+Semaphore_Valgrind_Linux:
+  extends: .Run_Valgrind_Linux
+  variables:
+    TestTags: "[semaphore]"
+
 Timeout_Valgrind_Linux:
   extends: .Run_Valgrind_Linux
   variables:
