--- a/.gitlab/ci/quality.yml
+++ b/.gitlab/ci/quality.yml
@@ -38,9 +38,9 @@ Clang_Format:
 
 Clang_Tidy_Linux:
   extends: .Clang_Tidy
-  image: kubasejdak/clang:latest
+  image: kubasejdak/clang:10
   variables:
-    Toolchain: "clang-9"
+    Toolchain: "clang-10"
 
 Clang_Tidy_Linux_ARM:
   extends: .Clang_Tidy
