--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,17 +17,18 @@ endif ()
 
 conan_init()
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
 # Project-wide compilation options.
 add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 
 if (COVERAGE)
     # Generate coverage report.
-    add_lcov_coverage(${CMAKE_CURRENT_SOURCE_DIR}/test/*)
+    add_lcov_coverage(IGNORE ${CMAKE_CURRENT_SOURCE_DIR}/test/*)
 endif ()
 
 add_subdirectory(${platform_SOURCE_DIR}/app ${platform_BINARY_DIR})
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 add_subdirectory(lib)
 add_subdirectory(test)
 
