--- a/.gitlab/ci/coverage-linux.yml
+++ b/.gitlab/ci/coverage-linux.yml
@@ -31,6 +31,11 @@ Mutex_Coverage:
   variables:
     Tags: "[mutex]"
 
+Semaphore_Coverage:
+  extends: .Linux_Coverage
+  variables:
+    Tags: "[semaphore]"
+
 Timeout_Coverage:
   extends: .Linux_Coverage
   variables:
