--- a/.gitlab/ci/coverage-linux.yml
+++ b/.gitlab/ci/coverage-linux.yml
@@ -2,7 +2,7 @@
   stage: coverage
   only:
     - master
-  image: kubasejdak/gcc:10
+  image: kubasejdak/gcc:latest
   tags:
     - linux
   needs: []
@@ -16,7 +16,7 @@
     - cd ${CI_JOB_NAME}
 
     # Build application.
-    - cmake .. -DPLATFORM=linux -DTOOLCHAIN=gcc-10 -DCOVERAGE=ON
+    - cmake .. -DPLATFORM=linux -DCOVERAGE=ON
     - make
     - bin/osal-tests [unit]${Tags}
     - make coverage
