--- a/lib/cpp/CMakeLists.txt
+++ b/lib/cpp/CMakeLists.txt
@@ -7,11 +7,13 @@ add_library(osal-cpp EXCLUDE_FROM_ALL
     sleep.cpp
     timestamp.cpp
 )
+add_library(osal::cpp ALIAS osal-cpp)
 
 target_include_directories(osal-cpp
     PUBLIC include
 )
 
 target_link_libraries(osal-cpp
-    PUBLIC osal-c
+    PUBLIC osal::c
+    PRIVATE osal::common
 )
