--- a/lib/freertos/CMakeLists.txt
+++ b/lib/freertos/CMakeLists.txt
@@ -1,14 +1,10 @@
-add_library(osal-freertos EXCLUDE_FROM_ALL
+target_sources(osal-c PRIVATE
     init.cpp
     Mutex.cpp
     Semaphore.cpp
     sleep.cpp
     Thread.cpp
     timestamp.cpp
-)
-
-target_include_directories(osal-freertos
-    PUBLIC ../include include
 )
 
 target_link_libraries(osal-freertos
