--- a/.gitlab/ci/quality.yml
+++ b/.gitlab/ci/quality.yml
@@ -2,7 +2,7 @@ Clang_Format:
   stage: quality
   image: kubasejdak/clang:12
   tags:
-    - linux
+    - cet_build
   needs: []
   script:
     - tools/check-clang-format.sh lib test
@@ -17,7 +17,7 @@ Clang_Format:
 .Clang_Tidy:
   stage: quality
   tags:
-    - linux
+    - cet_build
   needs: []
   artifacts:
     name: "${CI_JOB_NAME}_${CI_JOB_ID}"
@@ -51,7 +51,7 @@ Coverage_Total:
     - master
   image: kubasejdak/gcc:latest
   tags:
-    - linux
+    - cet_build
   needs:
     - Error_Coverage
     - Mutex_Coverage
