--- a/.gitlab/ci/sanitizers-linux.yml
+++ b/.gitlab/ci/sanitizers-linux.yml
@@ -8,7 +8,7 @@
     name: "${CI_JOB_NAME}_${CI_JOB_ID}"
     expire_in: 2 weeks
     paths:
-      - ${CI_JOB_NAME}/coverage
+      - ${CI_JOB_NAME}/bin
   script:
     - mkdir ${CI_JOB_NAME}
     - cd ${CI_JOB_NAME}
