Improve conan support.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,19 +19,12 @@ target_include_directories(apposal-tests
     PRIVATE .
 )
 
-conan_get(REQUIRES catch2/2.13.7)
-find_package(Catch2 REQUIRED)
-
 target_compile_definitions(apposal-tests
     # This is required to selectively run Catch2 tests using tags on platforms, where cmd line arguments are not available.
-    PRIVATE $<$<BOOL:${TEST_TAGS}>:TEST_TAGS="${TEST_TAGS}">
-)
-
-target_compile_definitions(Catch2::Catch2
-    INTERFACE CATCH_CONFIG_DISABLE_EXCEPTIONS $<$<STREQUAL:${PLATFORM},freertos-arm>:CATCH_CONFIG_NO_POSIX_SIGNALS>
+    PRIVATE $<$<BOOL:${TEST_TAGS}>:TEST_TAGS="${TEST_TAGS}"> CATCH_CONFIG_DISABLE_EXCEPTIONS $<$<STREQUAL:${PLATFORM},freertos-arm>:CATCH_CONFIG_NO_POSIX_SIGNALS>
 )
 
 target_link_libraries(apposal-tests
     PUBLIC platform-init
-    PRIVATE Catch2::Catch2 osal::c osal::cpp
+    PRIVATE osal::c osal::cpp
 )
