--- a/.gitlab/ci/sanitizers-linux.yml
+++ b/.gitlab/ci/sanitizers-linux.yml
@@ -14,7 +14,7 @@
     - cd ${CI_JOB_NAME}
 
     # Build application.
-    - cmake .. -DTOOLCHAIN=clang -D${Sanitizer}=ON
+    - cmake .. -DTOOLCHAIN=clang -DUSE_CONAN=ON -D${Sanitizer}=ON
     - make
     - bin/osal-tests [unit]
 
