Add complete implementation of osal time conversion functions.

--- a/lib/cpp/CMakeLists.txt
+++ b/lib/cpp/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(osal-cpp EXCLUDE_FROM_ALL
     ScopedLock.cpp
     Semaphore.cpp
     sleep.cpp
+    time.cpp
     timestamp.cpp
 )
 add_library(osal::cpp ALIAS osal-cpp)
