Add initial tests.

--- a/.gitlab/ci/coverage-linux.yml
+++ b/.gitlab/ci/coverage-linux.yml
@@ -37,6 +37,11 @@ Semaphore_Coverage:
   variables:
     Tags: "[semaphore]"
 
+Time_Coverage:
+  extends: .Linux_Coverage
+  variables:
+    Tags: "[time]"
+
 Timeout_Coverage:
   extends: .Linux_Coverage
   variables:
