Adjust repo for new platform to get minimal buildable start point

--- a/lib/common/CMakeLists.txt
+++ b/lib/common/CMakeLists.txt
@@ -9,6 +9,6 @@ target_include_directories(osal-common
     PRIVATE ../include
 )
 
-target_link_libraries(osal-common
-    PUBLIC utils::logger
-)
+# target_link_libraries(osal-common
+#     PUBLIC utils::logger
+# )
