Update CI preset for Linux to use 'linux-gcc-debug'

--- a/.github/workflows/build-and-test-linux.yml
+++ b/.github/workflows/build-and-test-linux.yml
@@ -77,7 +77,8 @@ jobs:
         include:
           - APP: osal-tests
     env:
-      PRESET: linux-native-gcc-debug
+      PRESET: linux-gcc-debug
+      # PRESET: linux-native-gcc-debug
     steps:
       - uses: kubasejdak-org/binary-run-action@main
         with:
