Enable init subdirectory in test CMake configuration

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 # find_library(Catch2 NAMES Catch2 Catch2d REQUIRED)
 
-# add_subdirectory(init)
+add_subdirectory(init)
 
 add_executable(osal-tests
     appMain.cpp
