Integrate platform initialization in appMain and update CMakeLists to link platform::init

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(platform COMPONENTS main)
 target_link_libraries(osal-tests
     PRIVATE
         # Catch2::Catch2
+        platform::init
         platform::main
 )
 
